@@ -1,4 +1,4 @@
-function cpf_callbacks = cpf_register_callback(cpf_callbacks, fcn, priority)
+function cpf_callbacks = cpf_register_callback(cpf_callbacks, fcn, priority, args)
 %CPF_REGISTER_CALLBACK  Register CPF callback functions
 %
 %   CPF_CALLBACKS = CPF_REGISTER_CALLBACK(CPF_CALLBACKS, FCN, PRIORITY)
@@ -16,10 +16,28 @@ function cpf_callbacks = cpf_register_callback(cpf_callbacks, fcn, priority)
 %                       cpf_qlim_event_cb       41
 %                       cpf_plim_event_cb       40
 %                       cpf_default_callback    0
+%^      ARGS : arguments to be passed to the callback each time it is invoked
 %
 %   Outputs:
 %       CPF_CALLBACKS : updated struct containing info about registered
 %                       CPF callback fcns
+%
+%   User Defined CPF Callback Functions:
+%       The user can define their own callback functions which take
+%       the same form and are called in the same contexts as
+%       CPF_DEFAULT_CALLBACK. These are specified via the MATPOWER
+%       option 'cpf.user_callback'. This option can be a string containing
+%       the name of the callback function, or a struct with the following
+%       fields, where all but the first are optional:
+%           'fcn'       - string with name of callback function
+%           'priority'  - numerical value specifying callback priority
+%                (default = 20, see CPF_REGISTER_CALLBACK for details)
+%           'args'      - arbitrary value (any type) passed to the callback
+%                         as CB_ARGS each time it is invoked
+%       Multiple user callbacks can be registered by assigning a cell array
+%       of such strings and/or structs to the 'cpf.user_callback' option.
+%
+%   See also RUNCPF, CPF_DEFAULT_CALLBACK.
 
 %   MATPOWER
 %   Copyright (c) 2016 by Power System Engineering Research Center (PSERC)
@@ -31,13 +49,20 @@ function cpf_callbacks = cpf_register_callback(cpf_callbacks, fcn, priority)
 %   See http://www.pserc.cornell.edu/matpower/ for more info.
 
 %% default priority
-if nargin < 3 || isempty(priority)
+if nargin < 4
+    args = [];
+    if nargin < 3
+        priority = [];
+    end
+end
+if isempty(priority)
     priority = 20;
 end
 
 cb = struct( ...
         'fcn', fcn, ...
-        'priority', priority ...
+        'priority', priority, ...
+        'args', args ...
     );
 if ~isa(cb.fcn, 'function_handle')
     cb.fcn = str2func(cb.fcn);
