@@ -109,11 +109,12 @@ function opt = mpoption(varargin)
 %       [  3 - same as 2, with 'pause' at each iteration                    ]
 %   cpf.plot.bus            <empty>     index of bus whose voltage is to be
 %                                       plotted
-%   cpf.user_callback       <empty>     string or cell array of strings
-%                                       with names of user callback functions
-%                                       see 'help cpf_default_callback'
-%   cpf.user_callback_args  <empty>     struct passed to user-defined
-%                                       callback functions
+%   cpf.user_callback       <empty>     string containing the name of a user
+%                                       callback function, or struct with
+%                                       function name, and optional priority
+%                                       and/or args, or cell array of such
+%                                       strings and/or structs, see
+%                                       'help cpf_default_callback' for details
 %
 %Optimal Power Flow options:
 %   name                    default     description [options]
@@ -503,6 +504,13 @@ if have_opt0
                 opt0.cpf.enforce_q_lims     = opt_d.cpf.enforce_q_lims;
                 opt0.cpf.p_lims_tol         = opt_d.cpf.p_lims_tol;
                 opt0.cpf.q_lims_tol         = opt_d.cpf.q_lims_tol;
+                if (~isempty(opt0.cpf.user_callback_args) && ...
+                        ~isstruct(opt0.cpf.user_callback_args)) || ...
+                        (isstruct(opt0.cpf.user_callback_args) && ...
+                         ~isempty(fields(opt0.cpf.user_callback_args)))
+                    warning('The ''cpf.user_callback_args'' option has been removed. Please include the args in a struct in ''cpf.user_callback'' instead.')
+                end
+                opt0.cpf = rmfield(opt0.cpf, 'user_callback_args');
             end
             opt0.v = v;
         end
@@ -587,15 +595,9 @@ if ~isempty(ov)
             vf = nested_struct_copy(mpoption_default(), mpoption_info_mips('V'));
             vf = nested_struct_copy(vf, mpoption_optional_fields());
             ex = struct(...
-                'name', {...
-                    'cpf.user_callback_args' ...
-                }, ...
-                'check', {...
-                    0 ...
-                }, ...
-                'copy_mode', {...
-                    '' ...
-                } ...
+                'name', {}, ...
+                'check', {}, ...
+                'copy_mode', {} ...
             );
             %% add exceptions for optional packages
             opt_pkgs = mpoption_optional_pkgs();
@@ -1451,8 +1453,7 @@ if ~isstruct(opt)
             'plot',                 struct(...
                 'level',                0, ...
                 'bus',                  []  ), ...
-            'user_callback',        '', ...
-            'user_callback_args',   struct()    ), ...
+            'user_callback',        ''  ), ...
         'opf',                  struct(...
             'ac',                   struct(...
                 'solver',               'DEFAULT'   ), ...
@@ -1543,7 +1544,8 @@ v = 11;     %% version number of MATPOWER options struct
             %% v10  - added 'most' field
             %% v11  - added options 'cpf.adapt_step_damping',
             %%        'cpf.enforce_p_lims', 'cpf.enforce_q_lims', 
-            %%        'cpf.p_lims_tol' and 'cpf.q_lims_tol'
+            %%        'cpf.p_lims_tol' and 'cpf.q_lims_tol', removed
+            %%        option 'cpf.user_callback_args'
 
 %%-------------------------------------------------------------------
 function db_level = DEBUG
