@@ -18,16 +18,24 @@ if k == 0
     nxx = cxx;
     cx.cb.cb1 = cxx;
     nx.cb.cb1 = nxx;
+    if ~isfield(cx.cb, 'shared')
+        cx.cb.shared = '';
+        nx.cb.shared = '';
+    end
+    cx.cb.shared = [cx.cb.shared '1'];
+    nx.cb.shared = [nx.cb.shared '1'];
 else
     nxx = nx.cb.cb1;            %% get next callback state
     %%-----  ITERATION call  -----
     if k > 0
         nxx.iteration = nxx.iteration + 1;
         nx.cb.cb1 = nxx;        %% update next callback state
+        nx.cb.shared = [nx.cb.shared '1'];  %% update next callback state
     %%-----  FINAL call  -----
     else    % k < 0
         results.cb1.initial     = nxx.initial;
         results.cb1.iteration   = nxx.iteration;
         results.cb1.final       = 1;
+        results.shared          = nx.cb.shared;
     end
 end
